--- a/index.html
+++ b/index.html
@@ -20,8 +20,32 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
   <body>
-    <h1>Hello world HTML!</h1>
-    <h2>H2</h2>
-    <h3>H3</h3>
+    <div class="app">
+      <header class="header">
+        <nav class="header__navbar">
+          <ul class="header__navbar-list">
+            <li class="header__navbar-item">
+              Vào cửa hàng trên ứng dụng bán hàng CellPhone
+            </li>
+            <li class="header__navbar-item">Kết nối</li>
+          </ul>
+
+          <ul class="header__navbar-list">
+            <li class="header__navbar-item">
+              <a href="" class="header__navbar-item-link">Thông Báo</a>
+            </li>
+            <li class="header__navbar-item">
+              <a href="" class="header__navbar-item-link">Trợ giúp</a>
+            </li>
+            <li class="header__navbar-item">Đăng kí</li>
+            <li class="header__navbar-item">Đăng nhập</li>
+          </ul>
+        </nav>
+      </header>
+
+      <div class="container"></div>
+
+      <footer class="footer"></footer>
+    </div>
   </body>
 </html>
