--- a/index.html
+++ b/index.html
@@ -150,8 +150,6 @@
                   ></i>
                   Trợ giúp
                 </a>
-               
-                
               </li>
               <!-- Dang ki dang nhap code -->
               <li
@@ -170,6 +168,134 @@
       <div class="container"></div>
 
       <footer class="footer"></footer>
+
+      <!-- Modal Code -->
     </div>
+    <!-- <div class="modal">
+      <div class="modal__overlay"></div>
+
+      <div class="modal__body">
+         <-- Register form  -->
+    <!-- <div class="auth-form">
+          <div class="auth-form__container">
+            <div class="auth-form_header">
+              <h3 class="auth-form__heading">Đăng Ký</h3>
+              <div class="auth-form__switch-btn">Đăng Nhập</div>
+            </div>
+
+            <div class="auth-form__form">
+              <div class="auth-form__group">
+                <input
+                  type="text"
+                  class="auth-form__input"
+                  placeholder="Email Của Bạn"
+                />
+              </div>
+              <div class="auth-form__group">
+                <input
+                  type="password"
+                  class="auth-form__input"
+                  placeholder="Nhập Mật khẩu"
+                />
+              </div>
+              <div class="auth-form__group">
+                <input
+                  type="password"
+                  class="auth-form__input"
+                  placeholder="Nhập lại Mật khẩu"
+                />
+              </div>
+            </div>
+
+            <div class="auth-form__aside">
+              <p class="auth-form__policy-text">
+                Bằng việc đăng ký, bãn đã đồng ý với Shopee về
+                <a href="" class="author-form__text-link">Điều khoản dịch vụ</a
+                >&
+                <a href="" class="author-form__text-link">Chính sách bảo mật</a>
+              </p>
+            </div>
+
+            <div class="auth-form__controls">
+              <button class="btn btn-normal auth-form__controls-back">TRỞ LẠI</button>
+              <button class="btn btn--primary">ĐĂNG KÝ</button>
+            </div>
+          </div>
+          <div class="auth-form__socials">
+            <a href="" class="auth-form__socials--facebook btn btn--size-s btn--with-icon">
+              <i class="auth-form__socials-icon fab fa-facebook-square"></i>
+              <span class="auth-form__social-title">
+                Kết nối với Facebook
+              </span>
+            </a>
+            <a href="" class="auth-form__socials--google btn btn--size-s btn--with-icon">
+              <i class="auth-form__socials-icon fa-brands fa-google"></i>
+              <span class="auth-form__social-title">
+                Kết nối với Google
+              </span>
+            </a>
+          </div>
+        </div> -->
+    <!-- Login form -->
+    <!-- <div class="auth-form">
+          <div class="auth-form__container">
+            <div class="auth-form_header">
+              <h3 class="auth-form__heading">Đăng Nhập</h3>
+              <div class="auth-form__switch-btn">Đăng Ký</div>
+            </div>
+
+            <div class="auth-form__form">
+              <div class="auth-form__group">
+                <input
+                  type="text"
+                  class="auth-form__input"
+                  placeholder="Email Của Bạn"
+                />
+              </div>
+              <div class="auth-form__group">
+                <input
+                  type="password"
+                  class="auth-form__input"
+                  placeholder="Nhập Mật khẩu"
+                />
+              </div>
+            </div>
+
+            <div class="auth-form__aside">
+              <div class="auth-form__help">
+                <a href="" class="auth-from__help-link auth-form__help--forgot">Quên mật khẩu</a>
+                <span class="auth-form__help-separate"></span>
+                <a href="" class="auth-from__help-link">Cần hỗ trợ?</a>
+              </div>
+            </div>
+
+            <div class="auth-form__controls">
+              <button class="btn btn-normal auth-form__controls-back">
+                TRỞ LẠI
+              </button>
+              <button class="btn btn--primary">ĐĂNG NHẬP</button>
+            </div>
+          </div>
+          <div class="auth-form__socials">
+            <a
+              href=""
+              class="auth-form__socials--facebook btn btn--size-s btn--with-icon"
+            >
+              <i class="auth-form__socials-icon fab fa-facebook-square"></i>
+              <span class="auth-form__social-title">
+                Kết nối với Facebook
+              </span>
+            </a>
+            <a
+              href=""
+              class="auth-form__socials--google btn btn--size-s btn--with-icon"
+            >
+              <i class="auth-form__socials-icon fa-brands fa-google"></i>
+              <span class="auth-form__social-title"> Kết nối với Google </span>
+            </a>
+          </div>
+        </div> 
+      </div>
+    </div> -->
   </body>
 </html>
