--- a/index.html
+++ b/index.html
@@ -176,16 +176,34 @@
             </div>
 
             <div class="header__search">
-              <input
-                type="text"
-                class="header__search-input"
-                placeholder="Tìm để tìm kiếm sản phẩm"
-              />
+              <div class="header__search-input-wrap">
+                <input
+                  type="text"
+                  class="header__search-input"
+                  placeholder="Tìm để tìm kiếm sản phẩm"
+                />
+                <!-- Search history -->
+                <div class="header__search-history">
+                  <h3 class="header__search-history-heading">
+                    Lịch sử tìm kiếm
+                  </h3>
+                  <ul class="header__search-history-list">
+                    <li class="header__search-history-item">
+                      <a href="">Kem dưỡng da</a>
+                    </li>
+                    <li class="header__search-history-item">
+                      <a href="">Kem trị mụn</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
               <div class="header__search-selection">
                 <span class="header__search-selection-label">Trong Shop</span>
                 <i class="header__search-selection-icon fas fa-angle-down"></i>
                 <ul class="header___search-option">
-                  <li class="header___search-option-item header___search-option-item--active">
+                  <li
+                    class="header___search-option-item header___search-option-item--active"
+                  >
                     <span>Trong Shop</span>
                     <i class="fas fa-check"></i>
                   </li>
@@ -199,9 +217,20 @@
                 <i class="header__search-btn-icon fas fa-search"></i>
               </button>
             </div>
-
+            <!-- header cart -->
             <div class="header__cart">
-              <i class="header__cart-icon fas fa-shopping-cart"></i>
+              <div class="header__cart-wrap">
+                <i class="header__cart-icon fas fa-shopping-cart"></i>
+                <!-- hash cart no cart -->
+                <div class="header__cart-list header__cart-list--no-cart">
+                  <img
+                    src="assets/img/no_cart.jpg"
+                    alt=""
+                    class="header__cart-list-no-cart-img"
+                  />
+                  <p class="header__cart-list-no-cart-msg">Chưa có sản phẩm</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
