--- a/index.html
+++ b/index.html
@@ -221,12 +221,13 @@
             <div class="header__cart">
               <div class="header__cart-wrap">
                 <i class="header__cart-icon fas fa-shopping-cart"></i>
+                <span class="header__cart-notice">3</span>
                 <!-- hash cart no cart -->
-                <div class="header__cart-list header__cart-list--no-cart">
+                <div class="header__cart-list">
                   <img
                     src="assets/img/no_cart.jpg"
                     alt=""
-                    class="header__cart-list-no-cart-img"
+                    class="header__cart-no-cart-img"
                   />
                   <p class="header__cart-list-no-cart-msg">Chưa có sản phẩm</p>
                 </div>
