--- a/index.html
+++ b/index.html
@@ -230,6 +230,96 @@
                     class="header__cart-no-cart-img"
                   />
                   <p class="header__cart-list-no-cart-msg">Chưa có sản phẩm</p>
+                  <h4 class="header__cart-heading">Sản phẩm đã thêm</h4>
+                  <ul class="header__cart-list-item">
+                    <!-- cart item -->
+                    <li class="header__cart-item">
+                      <img
+                        src="https://down-vn.img.susercontent.com/file/vn-50009109-cebfae17cd5979d823fb74ac79a922fa_xhdpi"
+                        alt=""
+                        class="header__cart-img"
+                      />
+                      <div class="header__cart-item-info">
+                        <div class="header__cart-item-head">
+                          <h5 class="header__cart-item-name">
+                            Bộ kem đặc trị vùng mặc
+                          </h5>
+                          <div class="header__cart-item-price-wrap">
+                            <span class="header__cart-item-price"
+                              >2.000.000VND
+                            </span>
+                            <span class="header__cart-item-multiply">x</span>
+                            <span class="header__cart-item-qnt">2</span>
+                          </div>
+                        </div>
+                        <div class="header__cart-item-body">
+                          <span class="header__cart-item-description">
+                            Phân loại: Bạc
+                          </span>
+                          <span class="header__cart-item-remove">Xóa</span>
+                        </div>
+                      </div>
+                    </li>
+
+                    <li class="header__cart-item">
+                      <img
+                        src="https://down-vn.img.susercontent.com/file/608a2b2d91515c106a86b836d5d14d09"
+                        alt=""
+                        class="header__cart-img"
+                      />
+                      <div class="header__cart-item-info">
+                        <div class="header__cart-item-head">
+                          <h5 class="header__cart-item-name">
+                            Bộ kem đặc trị vùng mặc
+                          </h5>
+                          <div class="header__cart-item-price-wrap">
+                            <span class="header__cart-item-price"
+                              >2.000.000VND
+                            </span>
+                            <span class="header__cart-item-multiply">x</span>
+                            <span class="header__cart-item-qnt">2</span>
+                          </div>
+                        </div>
+                        <div class="header__cart-item-body">
+                          <span class="header__cart-item-description">
+                            Phân loại: Bạc
+                          </span>
+                          <span class="header__cart-item-remove">Xóa</span>
+                        </div>
+                      </div>
+                    </li>
+
+                    <li class="header__cart-item">
+                      <img
+                        src="https://down-vn.img.susercontent.com/file/f60b903cc61042433ec8a91137df9183"
+                        alt=""
+                        class="header__cart-img"
+                      />
+                      <div class="header__cart-item-info">
+                        <div class="header__cart-item-head">
+                          <h5 class="header__cart-item-name">
+                            Bộ kem đặc trị vùng mặc
+                          </h5>
+                          <div class="header__cart-item-price-wrap">
+                            <span class="header__cart-item-price"
+                              >1.915.500VND
+                            </span>
+                            <span class="header__cart-item-multiply">x</span>
+                            <span class="header__cart-item-qnt">5</span>
+                          </div>
+                        </div>
+                        <div class="header__cart-item-body">
+                          <span class="header__cart-item-description">
+                            Phân loại: Thom
+                          </span>
+                          <span class="header__cart-item-remove">Xóa</span>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                  <a href="#" class="header__cart-view-cart btn btn--primary">
+                    Xem giỏ hàng
+                  </a>
                 </div>
               </div>
             </div>
