--- a/index.html
+++ b/index.html
@@ -1401,13 +1401,13 @@
             <div class="grid__column-2-4">
               <h3 class="footer__heading">Vào cửa hàng trên ứng dụng<h3>
                 <div class="footer__download">
-                  <img src="/assets/img/qr_code.png" alt="Download Qr" class="footer__download-qr">
+                  <img src="./assets/img/qr_code.png" alt="Download Qr" class="footer__download-qr">
                   <div class="footer__download-apps">
                     <a href="" class="footer__download-app-link">
-                      <img src="/assets/img/google_play.png" alt="Google Play" class="footer__download-apps-img">
+                      <img src="./assets/img/google_play.png" alt="Google Play" class="footer__download-apps-img">
                     </a>
                     <a href="" class="footer__download-app-link">
-                      <img src="/assets/img/app_store.png" alt="App store" class="footer__download-apps-img">
+                      <img src="./assets/img/app_store.png" alt="App store" class="footer__download-apps-img">
                     </a>
                   </div>
                 </div>
